<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_menu3"
    android:id="@+id/menu_container"
    tools:context=".Menu">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:background="@drawable/sub_inputs_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="Logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_user_title"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_name"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_name"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.265" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textColor="@color/white"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/txt_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/txt_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_password"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edit_form"
        app:layout_constraintEnd_toEndOf="@+id/txt_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_name"
        app:layout_constraintVertical_bias="0.584" />

    <LinearLayout
        android:id="@+id/show_form_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_email"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/txt_name">

        <TextView
            android:id="@+id/viewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Nome Usuário"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/viewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Usuário"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/txt_name">

        <EditText
            android:id="@+id/edtViewName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:inputType="text"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/white"
            android:textSize="11dp" />

        <EditText
            android:id="@+id/edtViewEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="11dp" />

        <EditText
            android:id="@+id/edtViewSenha"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:textColor="@color/white"
            android:inputType="numberPassword"
            android:textSize="11dp" />

        <Switch
            android:id="@+id/switch_password"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/design_default_color_error"
            android:background="@drawable/custom_switch"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edt_info"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:textColor="@color/white"
        android:background="@drawable/btn_edt_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.035" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save_alt"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit_save"
        android:visibility="invisible"
        android:textColor="@color/white"
        android:background="@drawable/btn_save_info"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/btn_edt_info"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/btn_edt_info"
        app:layout_constraintTop_toBottomOf="@+id/btn_edt_info"
        app:layout_constraintVertical_bias="0.033" />
</androidx.constraintlayout.widget.ConstraintLayout>